# plataforma-ganep-lar-backend

./: .Dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ganep_lar/: aj.py  config.py  main.py  routes.py
ganep_lar/dashboards/dispositivos/: main.py
ganep_lar/dashboards/hospitalizacoes/: main.py
ganep_lar/dashboards/infeccoes/: main.py
ganep_lar/dashboards/lpp/: main.py
ganep_lar/dashboards/movimentacoes/: main.py
ganep_lar/dashboards/utils/: generate_xlsx.py
ganep_lar/datasets/atendimentos_completo/: main.py
ganep_lar/mapa/produto_convenio/: main.py
ganep_lar/orcamentos/: main.py
ganep_lar/orcamentos/models/: __init__.py  atendimento.py  detalhes_mod.py  orcamento_infos.py  planilha_atendimentos.py
ganep_lar/paineis/bolinha/: main.py
ganep_lar/paineis/gestao_risco/: main.py
ganep_lar/services/: database.py
ganep_lar/services/data_base/models/: user.py
ganep_lar/services/datasets/: complete.py  insert_data.py  main.py  update.py
ganep_lar/services/datasets/atendimentos_completo/: main.py
ganep_lar/services/datasets/ccids/: main.py
ganep_lar/services/datasets/equipe/: main.py
ganep_lar/services/datasets/intercorrencias/: main.py
ganep_lar/services/datasets/mapa_atendimentos/: main.py
ganep_lar/services/datasets/orcamentos/: main.py
ganep_lar/services/datasets/utils/: __init__.py  convert_value_utils.py  unaccent.py
ganep_lar/services/datasets/visitas/: main.py
ganep_lar/services/firebase/: main.py
ganep_lar/services/google_sheets/: sheets_data.py
ganep_lar/services/mongo/: main.py
(+14 files in other folders)
